conversion de LigneDRECommisDTO en interface projection spring data avec nettoyage des tests unitaires